fix(helm): split datastorage-secret into separate DB and Redis secrets (#216)
The monolithic datastorage-secret bundled both db-secrets.yaml and
redis-secrets.yaml, making it impossible to provide a pre-created
Redis-only secret via redis.existingSecret. Split into:

- datastorage-db-secret (conditional on postgresql.auth.existingSecret)
- redis-secret (conditional on redis.existingSecret)

Use a projected volume to combine both secrets at the same mount path
(/etc/datastorage/secrets/), requiring zero Go code changes.

Updated: Helm chart, demo Kustomize overlay, and all E2E test
infrastructure manifests (datastorage.go, authwebhook_e2e.go,
workflowexecution_parallel.go).

Made-with: Cursor

--- a/charts/kubernaut/templates/datastorage/datastorage.yaml
+++ b/charts/kubernaut/templates/datastorage/datastorage.yaml
@@ -113,8 +113,18 @@ spec:
           configMap:
             name: datastorage-config
         - name: secrets
-          secret:
-            secretName: {{ include "kubernaut.datastorage.secretName" . }}
+          projected:
+            sources:
+              - secret:
+                  name: {{ include "kubernaut.datastorage.dbSecretName" . }}
+                  items:
+                    - key: db-secrets.yaml
+                      path: db-secrets.yaml
+              - secret:
+                  name: {{ include "kubernaut.redis.secretName" . }}
+                  items:
+                    - key: redis-secrets.yaml
+                      path: redis-secrets.yaml
 ---
 apiVersion: v1
 kind: Service
