--- a/charts/kubernaut/templates/infrastructure/secrets.yaml
+++ b/charts/kubernaut/templates/infrastructure/secrets.yaml
@@ -18,7 +18,7 @@ stringData:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: datastorage-secret
+  name: datastorage-db-secret
   namespace: {{ .Release.Namespace }}
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
@@ -27,6 +27,18 @@ stringData:
   db-secrets.yaml: |
     username: {{ .Values.postgresql.auth.username }}
     password: {{ .Values.postgresql.auth.password }}
+{{- end }}
+---
+{{- if not .Values.redis.existingSecret }}
+apiVersion: v1
+kind: Secret
+metadata:
+  name: redis-secret
+  namespace: {{ .Release.Namespace }}
+  labels:
+    {{- include "kubernaut.labels" . | nindent 4 }}
+type: Opaque
+stringData:
   redis-secrets.yaml: |
     password: {{ .Values.redis.password | quote }}
 {{- end }}
