--- a/deploy/demo/base/secrets/kustomization.yaml
+++ b/deploy/demo/base/secrets/kustomization.yaml
@@ -13,11 +13,16 @@ secretGenerator:
     envs:
       - postgresql.env
 
-  # DataStorage credentials (db + redis, mounted as YAML files)
-  - name: datastorage-secret
+  # DataStorage DB credentials (mounted as YAML file)
+  - name: datastorage-db-secret
     type: Opaque
     files:
       - db-secrets.yaml
+
+  # Redis credentials (mounted as YAML file)
+  - name: redis-secret
+    type: Opaque
+    files:
       - redis-secrets.yaml
 
   # Slack webhook URL for notification controller
