refactor(api): rename signal mode enum from "predictive" to "proactive"
Update CRD kubebuilder markers (Enum=reactive;proactive), OpenAPI specs,
and regenerate all ogen clients. "Proactive" better reflects AIOps
terminology where the system acts before impact based on leading indicators,
rather than merely forecasting.

Made-with: Cursor

--- a/api/openapi/data-storage-v1.yaml
+++ b/api/openapi/data-storage-v1.yaml
@@ -3603,12 +3603,12 @@ components:
         # Signal Mode Fields (BR-SP-106, ADR-054)
         signal_mode:
           type: string
-          enum: [reactive, predictive]
-          description: Whether this signal is reactive (incident occurred) or predictive (incident predicted). BR-SP-106 Predictive Signal Mode Classification.
-          example: "predictive"
+          enum: [reactive, proactive]
+          description: Whether this signal is reactive (incident occurred) or proactive (incident anticipated). BR-SP-106 Proactive Signal Mode Classification.
+          example: "proactive"
         source_signal_name:
           type: string
-          description: Original signal name before normalization. Only populated for predictive signals (e.g., PredictedOOMKill). SOC2 CC7.4 audit trail preservation.
+          description: Original signal name before normalization. Only populated for proactive signals (e.g., PredictedOOMKill). SOC2 CC7.4 audit trail preservation.
           example: "PredictedOOMKill"
 
         # Error Fields (conditional)
