--- a/charts/kubernaut/crds/kubernaut.ai_aianalyses.yaml
+++ b/charts/kubernaut/crds/kubernaut.ai_aianalyses.yaml
@@ -244,18 +244,18 @@ spec:
                         type: string
                       signalMode:
                         description: |-
-                          SignalMode indicates whether this is a reactive or predictive signal.
-                          BR-AI-084: Predictive Signal Mode Prompt Strategy
+                          SignalMode indicates whether this is a reactive or proactive signal.
+                          BR-AI-084: Proactive Signal Mode Prompt Strategy
                           Copied from SignalProcessing status by RemediationOrchestrator.
                           Used by HAPI to switch investigation prompt (RCA vs. predict & prevent).
                         enum:
                         - reactive
-                        - predictive
+                        - proactive
                         type: string
                       signalName:
                         description: |-
                           Signal name (e.g., OOMKilled, CrashLoopBackOff)
-                          Normalized by SignalProcessing: predictive names mapped to base names (BR-SP-106)
+                          Normalized by SignalProcessing: proactive names mapped to base names (BR-SP-106)
                         type: string
                       targetResource:
                         description: Target resource identification
