refactor(deploy): rename proactive signal config and update demo scenarios
Rename config file to proactive-signal-mappings.yaml, update ConfigMap names,
volume mounts, and YAML keys in Helm and Kustomize templates. Update demo
scenario descriptions from "Predictive" to "Proactive".

Made-with: Cursor

--- a/config/signalprocessing/proactive-signal-mappings.yaml
+++ b/config/signalprocessing/proactive-signal-mappings.yaml
@@ -1,19 +1,19 @@
-# Predictive Signal Name Mappings
-# BR-SP-106: Predictive Signal Mode Classification
-# ADR-054: Predictive Signal Mode Classification and Prompt Strategy
+# Proactive Signal Name Mappings
+# BR-SP-106: Proactive Signal Mode Classification
+# ADR-054: Proactive Signal Mode Classification and Prompt Strategy
 #
-# Maps predictive signal names to their base names for workflow catalog normalization.
-# Signals matching a key are classified as "predictive" with signalMode = "predictive".
+# Maps proactive signal names to their base names for workflow catalog normalization.
+# Signals matching a key are classified as "proactive" with signalMode = "proactive".
 # Signals NOT in this map default to "reactive" with signalMode = "reactive".
 #
 # This file supports hot-reload (BR-SP-072 pattern): changes are picked up
 # automatically without restarting the SignalProcessing controller.
 #
-# Format: <PredictiveSignalName>: <BaseSignalName>
+# Format: <ProactiveSignalName>: <BaseSignalName>
 #
 # Convention: Prometheus predict_linear() alerts use the "Predicted" prefix.
 # Operators can add mappings for any signal source naming convention.
-predictive_signal_mappings:
+proactive_signal_mappings:
   PredictedOOMKill: OOMKilled
   PredictedCPUThrottling: CPUThrottling
   PredictedDiskPressure: DiskPressure
