fix(demo): validate resource-contention scenario fixtures (#231)
- Align alert name to ContainerOOMKilling (matches memory-escalation workflow signalName)
- Add resource-contention:increase-memory-limits-job to workflow-mappings.sh
- Add standard files: README.md, cleanup.sh, validate.sh
- Update run.sh issue reference from #214 to #231
- Add P22 entry to SCENARIO_VALIDATION_TRACKER.md (BLOCKED by #214)

Made-with: Cursor

--- a/deploy/demo/scenarios/resource-contention/manifests/prometheus-rule.yaml
+++ b/deploy/demo/scenarios/resource-contention/manifests/prometheus-rule.yaml
@@ -9,14 +9,15 @@ spec:
   groups:
   - name: contention-app
     rules:
-    - alert: ContainerOOMKilled
+    - alert: ContainerOOMKilling
       expr: |
-        kube_pod_container_status_last_terminated_reason{
-          reason="OOMKilled",
-          namespace="demo-resource-contention",
-          container="worker"
-        } > 0
-      for: 0m
+        increase(
+          kube_pod_container_status_last_terminated_reason{
+            reason="OOMKilled",
+            namespace="demo-resource-contention"
+          }[5m]
+        ) > 0
+      for: 30s
       labels:
         severity: critical
         namespace: demo-resource-contention
