fix(demo): add dependency declarations to cert-failure-gitops and gitops-drift workflows
DD-WE-006: Declare secret dependencies in demo workflow schemas so
DS validates them at registration time and WFE injects them at runtime.

Update remediation scripts to read credentials from mounted secret
paths (/run/kubernaut/secrets/) instead of expecting env vars.

Made-with: Cursor

--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
@@ -23,21 +23,19 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:demo-v1.2
+  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:demo-v1.3
+
+# DD-WE-006: Infrastructure dependencies provisioned by operators in kubernaut-workflows.
+# Credentials are mounted as files, NOT provided by the LLM.
+dependencies:
+  secrets:
+    - name: gitea-repo-creds
 
 parameters:
   - name: GIT_REPO_URL
     type: string
     required: true
     description: "URL of the Git repository (without credentials, e.g., http://gitea-http.gitea:3000/kubernaut/demo-cert-gitops-repo.git)"
-  - name: GIT_USERNAME
-    type: string
-    required: true
-    description: "Git username for clone/push authentication"
-  - name: GIT_PASSWORD
-    type: string
-    required: true
-    description: "Git password or token for clone/push authentication"
   - name: GIT_BRANCH
     type: string
     required: false
