fix(helm): split DD-WE-006 dependency-reader into least-privilege Roles
Replace the shared dependency-reader Role with two separate Roles:
- datastorage-dep-reader: get only (point-in-time validation at registration)
- workflowexecution-dep-reader: get/list/watch (Informer-based validation at execution)

Made-with: Cursor

--- a/charts/kubernaut/templates/rbac/dependency-reader-rbac.yaml
+++ b/charts/kubernaut/templates/rbac/dependency-reader-rbac.yaml
@@ -1,11 +1,10 @@
 ---
-# DD-WE-006: Schema-declared dependency validation RBAC
-# Role in kubernaut-workflows namespace allowing read access to Secrets and ConfigMaps.
-# Used by Data Storage (registration-time validation) and WorkflowExecution (execution-time validation).
+# DD-WE-006: DataStorage registration-time dependency validation.
+# Only needs point-in-time lookups (get) to verify declared secrets/configmaps exist.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: dependency-reader
+  name: datastorage-dep-reader
   namespace: kubernaut-workflows
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
@@ -14,35 +13,47 @@ rules:
     resources: ["secrets", "configmaps"]
     verbs: ["get"]
 ---
-# DD-WE-006: DataStorage SA needs to validate dependencies at workflow registration time.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: datastorage-dependency-reader
+  name: datastorage-dep-reader
   namespace: kubernaut-workflows
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: dependency-reader
+  name: datastorage-dep-reader
 subjects:
   - kind: ServiceAccount
     name: data-storage-sa
     namespace: {{ .Release.Namespace }}
 ---
-# DD-WE-006: WorkflowExecution controller SA needs to validate dependencies at execution time.
+# DD-WE-006: WorkflowExecution execution-time dependency validation.
+# Uses an Informer that requires list+watch to sync, plus get for lookups.
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: workflowexecution-dep-reader
+  namespace: kubernaut-workflows
+  labels:
+    {{- include "kubernaut.labels" . | nindent 4 }}
+rules:
+  - apiGroups: [""]
+    resources: ["secrets", "configmaps"]
+    verbs: ["get", "list", "watch"]
+---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: workflowexecution-dependency-reader
+  name: workflowexecution-dep-reader
   namespace: kubernaut-workflows
   labels:
     {{- include "kubernaut.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: dependency-reader
+  name: workflowexecution-dep-reader
 subjects:
   - kind: ServiceAccount
     name: workflowexecution-controller
