--- a/deploy/demo/helm/kube-prometheus-stack-values.yaml
+++ b/deploy/demo/helm/kube-prometheus-stack-values.yaml
@@ -37,7 +37,7 @@ alertmanager:
       receiver: "null"
       group_wait: 5s
       group_interval: 5s
-      repeat_interval: 1h
+      repeat_interval: 1m
       routes:
         # All alerts from demo-* namespaces go to the Gateway webhook.
         - match_re:
