fix(workflow): rebuild test workflow images with updated dep-secret-tekton schema
Rebuild and push all test workflow OCI images so the dep-secret-tekton
image embeds the updated schema referencing e2e-dep-secret-tekton
instead of e2e-dep-secret. Two-pass build also synced execution.bundle
digests across all schema files.

Made-with: Cursor

--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:demo-v1.3
+  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:v1.0.0
 
 # DD-WE-006: Infrastructure dependencies provisioned by operators in kubernaut-workflows.
 # Credentials are mounted as files, NOT provided by the LLM.
