fix(gitops-workflow): discover git params from ArgoCD, fix auth and monitoring (#241)
- Remove GIT_REPO_URL and GIT_BRANCH from workflow schema parameters;
  the LLM cannot reliably determine internal Gitea URLs or branches.
- Update remediate.sh to discover repo URL and branch from the ArgoCD
  Application targeting the affected namespace (Phase 0 discovery).
- Install jq in the workflow container for ArgoCD JSON parsing.
- Add argoproj.io/applications and cert-manager.io/certificates read
  access to the kubernaut-workflow-runner ClusterRole.
- Pin workflow schema bundle to new exec image digest.
- Add ServiceMonitor for cert-manager metrics scraping.
- Fix run.sh to wait for ArgoCD sync before deleting TLS secret.

Made-with: Cursor

--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/Dockerfile.exec
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/Dockerfile.exec
@@ -5,7 +5,7 @@ FROM registry.access.redhat.com/ubi9/ubi-minimal:latest
 ARG TARGETARCH
 ARG KUBECTL_VERSION=v1.31.4
 
-RUN microdnf install -y git && microdnf clean all
+RUN microdnf install -y git jq && microdnf clean all
 
 RUN curl -fsSL -o /usr/local/bin/kubectl \
     "https://dl.k8s.io/release/${KUBECTL_VERSION}/bin/linux/${TARGETARCH}/kubectl" && \
