--- a/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
+++ b/deploy/demo/scenarios/cert-failure-gitops/workflow/workflow-schema.yaml
@@ -23,7 +23,7 @@ detectedLabels:
 
 execution:
   engine: job
-  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job:v1.0.0
+  bundle: quay.io/kubernaut-cicd/test-workflows/fix-certificate-gitops-job@sha256:9c97e791e8c58397f668456f54414e263852974f85f89c0a65a1eb454f0877e1
 
 # DD-WE-006: Infrastructure dependencies provisioned by operators in kubernaut-workflows.
 # Credentials are mounted as files, NOT provided by the LLM.
@@ -32,15 +32,6 @@ dependencies:
     - name: gitea-repo-creds
 
 parameters:
-  - name: GIT_REPO_URL
-    type: string
-    required: true
-    description: "URL of the Git repository (without credentials, e.g., http://gitea-http.gitea:3000/kubernaut/demo-cert-gitops-repo.git)"
-  - name: GIT_BRANCH
-    type: string
-    required: false
-    description: "Branch to revert on"
-    default: "main"
   - name: TARGET_NAMESPACE
     type: string
     required: true
